# rengine

./: .gitignore  .project  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  DEEP_DIVE.md  EDITOR_GUIDE.md  README.md  ROADMAP.md  ROADMAP_EDITOR.md  ROADMAP_ENGINE.md  bash.exe.stackdump  telemetry.csv
.github/workflows/: editor-windows-ui-automation.yml
_old/: main.rs
_old/graphics/: renderer.rs
_old/input/: keyboard.rs
_old/utils/: transform.rs
editor/: Cargo.toml
editor/automation/windows_ui/: README.md  run_focus_suite.py
editor/scratch/: scene-prototype.scene.json  scene-prototype_save_as_test.scene.json
editor/src/: app.rs  main.rs  scene.rs
editor/src/app/: drawing.rs  filesystem.rs  forms.rs  popup.rs  state.rs  windowing.rs
engine/: Cargo.toml
engine/src/: app.rs  debug.rs  lib.rs  particle.rs  save.rs  scene.rs  text.rs  ui.rs
engine/src/assets/: audio.rs  color.rs  mod.rs  pipeline.rs  pixelart.rs  spritesheet.rs
engine/src/canvas/: canvas.wgsl  mod.rs
engine/src/hud/: hud.wgsl  mod.rs
engine/src/input/: action.rs  gamepad.rs  keyboard.rs  mod.rs
engine/src/math/: mod.rs  rect.rs  rng.rs  time.rs  timer.rs  tween.rs
engine/src/netcode/: mod.rs  transport.rs
engine/src/renderer/: blit.wgsl  camera.rs  mod.rs  nineslice.rs  postfx.rs  sprite.rs  sprite.wgsl  texture.rs
engine/src/renderer3d/: camera.rs  mesh.rs  mesh3d.wgsl  mod.rs
engine/src/scene/: data2d.rs  globals.rs  layer2d.rs  mod.rs  script2d.rs  script_manifest.rs  validation.rs  world2d.rs
engine/src/world/: iso.rs  mod.rs  physics.rs  tilemap.rs  trigger.rs
game/: .gitignore  Cargo.toml
game/src/: main.rs  sprite_actor.rs
game/src/actors/: character_actor.rs  mod.rs
game/src/actors/characters/: player.rs
rengine-lib/: Cargo.toml
rengine-lib/src/: input.rs  lib.rs  scene.rs  sprite.frag.wgsl  sprite.rs  sprite.vert.wgsl  util.rs  window.rs
rengine-lib/src/game_object/: game_object.rs  mod.rs
rengine-lib/src/graphics/: mod.rs  window_container.rs
rengine-lib/src/physics/: mod.rs
rengine-lib/src/shaders/: sprite.vert.wgsl
rengine-lib/src/util/: mod.rs
rengine-lib/src/window/: mod.rs
samples/features/feature-animation/: Cargo.toml
samples/features/feature-animation-state-machines/: Cargo.toml
samples/features/feature-audio/: Cargo.toml
samples/features/feature-camera/: Cargo.toml
samples/features/feature-canvas/: Cargo.toml
samples/features/feature-debug-overlay/: Cargo.toml
samples/features/feature-everything/: Cargo.toml
samples/features/feature-fonts/: Cargo.toml
samples/features/feature-images/: Cargo.toml
samples/features/feature-input/: Cargo.toml
samples/features/feature-nineslice/: Cargo.toml
samples/features/feature-particles/: Cargo.toml
samples/features/feature-pixelart/: Cargo.toml
samples/features/feature-platformer/: Cargo.toml
samples/features/feature-postfx/: Cargo.toml
samples/features/feature-render-targets/: Cargo.toml
samples/features/feature-resolution/: Cargo.toml
samples/features/feature-rng/: Cargo.toml
samples/features/feature-saveload/: Cargo.toml
samples/features/feature-scene-scripts/: Cargo.toml  scripts.manifest.json
samples/features/feature-scenes/: Cargo.toml
samples/features/feature-sprites/: Cargo.toml
samples/features/feature-text/: Cargo.toml
samples/features/feature-text-input/: Cargo.toml
samples/features/feature-tilemap/: Cargo.toml
samples/features/feature-tooltips/: Cargo.toml
samples/features/feature-triggers/: Cargo.toml
samples/features/feature-tween/: Cargo.toml
samples/features/feature-ui/: Cargo.toml
samples/features/feature-ui-animations/: Cargo.toml
samples/features/feature-ui-flow/: Cargo.toml
samples/features/feature-ui-styling/: Cargo.toml
samples/game-fight/: Cargo.toml
samples/game-fight/src/: art.rs  bot.rs  input.rs  main.rs  render.rs  sim.rs  state.rs
samples/game-fps/: Cargo.toml
samples/game-fps-mp/: Cargo.toml
samples/game-fps-mp/src/: level.rs  main.rs  render.rs
samples/game-fps/src/: level.rs  main.rs  physics.rs  render.rs  state.rs
samples/game-iso/: Cargo.toml
samples/game-iso/src/: art.rs  level.rs  main.rs  render.rs  state.rs
samples/game-platformer/: Cargo.toml
samples/game-platformer/assets/: eye.ppm
samples/game-platformer/src/: main.rs  physics.rs
samples/game-racing/: Cargo.toml
samples/game-racing/src/: ai.rs  art.rs  car.rs  driver.rs  input.rs  main.rs  physics.rs  race.rs  render.rs  state.rs  telemetry.rs  track.rs  track_visuals.rs
samples/game-topdown/: Cargo.toml
samples/game-topdown/src/: level.rs  main.rs  render.rs  state.rs
samples/games/game-everything/: Cargo.toml
samples/games/game-fight/: Cargo.toml
samples/games/game-fight/src/: bot.rs  input.rs  main.rs  render.rs  sim.rs  state.rs
samples/games/game-fight/tests/: online_sync.rs
samples/games/game-fps/: Cargo.toml
samples/games/game-fps-mp/: Cargo.toml
samples/games/game-iso/: Cargo.toml
scripts/: image_resize_square.py
src/: input_example.rs  lib.rs  main.rs  sprite-fs.glsl  sprite-vs.glsl  texture-fs.glsl  texture-vs.glsl  vs.glsl
src/graphics/: mod.rs  renderer.rs  sprite.rs  sprite_temp.rs
src/graphics/sprite/: sprite.rs
src/input/: input.rs  input_map.rs  keyboard.rs  mod.rs
src/utils/: transform.rs
stl-gamejam/: Cargo.toml  IMPLEMENTATION_CHECKLIST.md
stl-gamejam/src/: gameplay.rs  main.rs  scenes.rs  state.rs
(+87 files in other folders)
