[workspace]
members = ["engine", "samples/games/game-platformer", "samples/games/game-topdown", "samples/games/game-iso", "samples/games/game-fps", "samples/games/game-fight", "samples/games/game-fps-mp", "samples/features/feature-scenes", "samples/features/feature-sprites", "samples/features/feature-camera", "samples/features/feature-input", "samples/features/feature-animation", "samples/features/feature-canvas", "samples/features/feature-pixelart", "samples/features/feature-tilemap", "samples/features/feature-triggers", "samples/features/feature-everything", "samples/features/feature-rng", "samples/features/feature-nineslice"]
resolver = "2"
