[package]
name = "rengine-editor"
version = "0.1.0"
edition = "2021"
description = "Native editor shell prototype for the Rengine workspace"

[dependencies]
eframe = "0.33"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"