[package]
name = "rengine"
version = "0.1.0"
edition = "2021"
description = "A 2D game engine built on wgpu, ready for future 3D expansion"

[dependencies]
winit = "0.29"
wgpu = "28"
glam = "0.32"
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"
log = "0.4"
env_logger = "0.11"
image = { version = "0.25", default-features = false, features = ["png"] }
gilrs = "0.11"
ggrs = "0.11"
serde = { version = "1", features = ["derive"] }
