[package]
name = "rengine"
version = "0.1.0"
edition = "2021"
description = "A 2D game engine built on wgpu, ready for future 3D expansion"

[features]
default = []
rollback = ["dep:ggrs", "dep:bincode", "dep:serde"]

[dependencies]
winit = "0.29"
wgpu = "28"
glam = "0.32"
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"
log = "0.4"
env_logger = "0.11"
image = { version = "0.25", default-features = false, features = ["png"] }
gilrs = "0.11"
ggrs = { version = "0.11", optional = true }
bincode = { version = "1", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
fontdue = "0.9"
