[package]
name = "game"
version = "0.1.0"
authors = ["justin wash <justin.wash@pm.me>"]
edition = "2018"
default-run = "game"

[dependencies]
rengine-lib = { path = "../rengine-lib" }
winit = "0.30.10"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }
pollster = "0.4.0"
windows-sys = { version = "0.59.0", features = ["Win32_UI_WindowsAndMessaging"] }
